test/scc/expr/semantic-errors/157.t
void test()
{
    int a[] = { "str", "ing" };
}